# Wolf3D-iOS

./: .gitignore  Readme.md
wolf3d/: .gitignore
wolf3d/code/Tremor/: .gitignore  Makefile.am  Makefile.in  autogen.sh  config.h.in  configure  configure.ac  configure.scan
wolf3d/code/Tremor/debian/: Makefile.am  Makefile.in
wolf3d/code/iphone/: .gitignore  Info.plist
wolf3d/code/iphone/wolf3d.xcodeproj/: project.pbxproj
wolf3d/newCode/: Tremor
wolf3d/newCode/iphone/wolf3d.xcodeproj/: project.pbxproj
wolf3d/wolfextractor/: .gitignore  wolfextractor.cbp
